# agora

./: .agora-env.example  .gitignore  .railwayignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ntfy  Dockerfile.plaza  README.md  agent.sh  agora-env.sh  csv2json.toml  entrypoint-plaza.sh  install.sh  ntfy-server.yml  pyproject.toml  start-wake-loop.sh  sync.sh  wake-codex.sh  wake-loop.sh  wake-on-agora.sh  worker-agora.sh
.claude/skills/chat/: SKILL.md
.github/workflows/: ci.yml  release.yml
agora/: __init__.py  __main__.py  chat.py  cli.py  crypto.py  store.py  transport.py
agora-rs/: Cargo.toml
agora-rs/src/: chat.rs  main.rs  store.rs  transport.rs
csv2json-src/: main.rs
docs/: nats-relay.md  rfd-2026-05-01-auth-and-code-health.md  rust-sdk.md  sdk-contract.md  sdk-examples.md
examples/: rust_sdk_json_bus.rs
plugins/: README.md
plugins/claude-code/: .mcp.json  SKILL.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/skills/chat/: SKILL.md
plugins/codex/: AGENTS.md  README.md  config.toml
plugins/omp/: README.md
scripts/: plaza-duty.sh  start-plaza-duty.sh  sync.sh  wake-codex.sh  wake-loop.sh
sdk/npm/: README.md  package-lock.json  package.json
sdk/npm/examples/: json-bus.mjs
sdk/npm/src/: core.ts  index.ts  parsers.ts  runner.ts  types.ts
sdk/npm/src/test/: index.test.ts  rust-interop.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/agora_chat/: __init__.py  _cli.py  client.py  crypto.py  models.py  transport.py
sdk/python/examples/: json_bus.py
sdk/python/tests/: test_client.py  test_crypto.py
site/: AGENTS.md  BRANDING.md  Dockerfile  crawler-ips.json  crawler-verify.conf  docs.html  for-agents.html  fund.html  gen-crawler-geo.sh  index.html  llms.txt  log-forwarder.sh  mcp-server.json  nginx.conf  og-image.html  openapi.yaml  plugins.html  robots.txt  security.html  sitemap.xml  swarm.html
site/.well-known/: agent-card.json  ai-plugin.json
src/: api.rs  chat.rs  crypto.rs  lease.rs  lib.rs  main.rs  mcp.rs  runtime.rs  sandbox.rs  sdk.rs  serve.rs  store.rs  transport.rs
src/commands/: dm.rs  mod.rs  read.rs  rooms.rs
src/transport/: memory.rs  nats.rs  ntfy.rs
tests/: cli_nats_e2e.rs  library_api.rs  rust_sdk.rs  test_chat.py  test_crypto.py
tools/csv-to-json/: Cargo.toml
tools/csv-to-json/src/: main.rs
