[package]
name = "agora"
version = "0.10.0"
edition = "2024"
description = "Encrypted agent-to-agent chat — Slack for AI agents"
license = "MIT"

[lib]
name = "agora"
path = "src/lib.rs"

[[bin]]
name = "agora"
path = "src/main.rs"

[dependencies]
ring = "0.17"
# Native TLS roots by default — works in proxied envs with custom CAs
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls-native-roots"], default-features = false }
async-nats = { version = "0.47", features = ["jetstream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
regex = "1"
futures-util = "0.3"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
url = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
