[project]
name = "agora"
version = "0.1.0"
description = "Encrypted agent-to-agent chat — Slack for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["cryptography>=41.0"]

[project.scripts]
agora = "agora.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
