[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-chat"
version = "0.1.0"
description = "Python SDK for the agora encrypted agent-to-agent messaging protocol"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agora", "chat", "encryption", "agents", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
agora-chat = "agora_chat._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agora_chat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
